# akshare

./: .dmypy.json  .env  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  20250513183856189.dmp  20250513192050374.dmp  20250513194114811.dmp  20250514113716081.dmp  20250514210636388.dmp  20250515100542611.dmp  2025051593123721.dmp  2025051593451900.dmp  2025051593551114.dmp  2025051593808122.dmp  2025051594752090.dmp  20250530100831705.dmp  20250530101041679.dmp  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-AKTools  Dockerfile-Jupyter  LICENSE  README.md  README_DEV.md  db_utils.py  kankan.csv  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  selectStock.py  setup.py  temp.txt  test.py
.codeboarding/: Core_Infrastructure_Utilities.md  Data_Source_Asset_Decryption_Management.md  Derivatives_Fixed_Income_Economic_Data_Module.md  Equity_Market_Data_Module.md  Pro_API_Client.md  on_boarding.md
akshare/: __init__.py  _version.py  basis.py  bond_bank.py  cons.py  cot.py  daily_bar.py  datasets.py  exceptions.py  qhkc.py  qhkc_fund.py  qhkc_index.py  qhkc_tool.py  receipt.py  request.py  request_config_manager.py  requests_fun.py  roll_yield.py  send_email.py  symbol_var.py
akshare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: db_config.ini
custom_extend/: custom_func.py  custom_fund_etf_em.py  custom_fund_etf_hist_sina.py
data_2_local/: adjust_factor_2_local.py  bfq_daily_etf_price_2_local.py  bfq_daily_stock_price_sz_main_2_local.py  code_industry_2_change_2_local.py  code_is_st_change_2_local.py  common_data_2_local.py  create_tables.py  etf_data_2_local.py  etf_tdx_data.py  index_data_2_local.py  index_stocks_2_local.py  index_tdx_data.py  listing_date_2_local.py  merge_multi_codes_data_2_one_table.py  qfq_stock_price_data_2_local.py  shenwan_industry_2_data_2_local.py  stock_share_change_cninfo_2_local.py  tdx_data.py  temp_2_local.py
docker/: Dockerfile  README.md
docs/: Makefile  README.rst  anaconda.md  answer.md  articles.md  changelog.md  conf.py  contributing.md  contributor.md  data_tips.md  demo.md  dependency.md  deploy_http.md  index.rst  indicator.md  installation.md  introduction.md  learn.md  make.bat  mysql_example.md  platform.md  requirements.txt  special.md  strategy.md  trade.md  tutorial.md
example/: daily_run.py  monitor.cmd  pic_rec.py  setting.json  test.py
input/: selectlist - 副本.xlsx  selectlist.xlsx  shanghailist.xlsx  shenzhenlist.xlsx  stock_percentiles_20250526.xlsx  stocksfilter_20250530.xlsx
output/: HS300_核心财务数据_2022.xlsx  HS300_核心财务数据_2023.xlsx  HS300_核心财务数据_2024.xlsx  HSTECH_核心财务数据_2024.xlsx  detect_volume_reversal_test5_20250529.xlsx  full_columns.csv  output.xlsx  output1.xlsx  output2.xlsx  selectProtfolio20250527.xlsx  stock_industry_change_cninfo_002555.xlsx  stock_industry_pe_ratio_cninfo_证监会行业分类.xlsx  stock_percentiles.xlsx  stock_percentiles_20250526.xlsx  stock_percentiles_20250527.xlsx  stock_percentiles_20250528.xlsx  stock_result.xlsx  stock_result_0.xlsx  stock_result_1.xlsx  stocksfilter_20250527.xlsx  test.xlsx  test1.xlsx  沪深300核心财务指标_2023年报.xlsx
quant_system/: INSTALL.md  Mac一步步操作指南.md  README.md  main.py  requirements.txt  start.sh  test_simple.py  web_app.py  web_app_v2.py  下次会话任务.md  使用说明_V2.md  快速修复说明.md  快速开始.md  数据说明.md  新手使用指南.md
t/: t0.py  t1_custom.py
temp/: djangoblog.com.conf  gitbook.akshare.top  nginx.conf
tests/: __init__.py  akshareSQL.sql  back_trader.py  back_trader_yh.py  calculateRevenueHS300.py  calculateRevenueHSTECH.py  calculateSelectStorkPE.py  calculateUserPortfolio.py  checkIndexPE.py  check_historical_year_pe.py  check_quarterly_revenue.py  detectVolumeReversal.py  getAllStock.py  get_industry_historyPE.py  insert2Mysql .py  insert2Mysql.py  insertSelectStockPE.py  insert_major_index_valuation.py  log4ak.py  save_industrype.py  save_pe_to_mysql.py  save_to_mysql .py  selectStock.py  stock_Selection_Strategy.py  test.py  test2.py  test_air.py  test_eastmoney_api_safety.py  test_func.py  test_index_option_qvix.py  test_macro_china_nbs.py  test_stock_financial_hk_report_em.py  test_stock_us_adanos.py  (+2 more)
(+1148 files in other folders)
