[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akshare"
dynamic = ["version"]
description = "AKShare is an elegant and simple financial data interface library for Python, built for human beings!"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AKFamily", email = "albertandking@gmail.com"}
]
keywords = [
    "stock",
    "option",
    "futures",
    "fund",
    "bond",
    "index",
    "air",
    "finance",
    "spider",
    "quant",
    "quantitative",
    "investment",
    "trading",
    "algotrading",
    "data",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.9.1",
    "lxml>=4.2.1",
    "pandas>=2.0.0",
    "requests>=2.22.0",
    "curl_cffi>=0.13.0",
    "html5lib>=1.0.1",
    "xlrd>=1.2.0",
    "urllib3>=1.25.8",
    "tqdm>=4.43.0",
    "openpyxl>=3.0.3",
    "jsonpath>=0.82",
    "tabulate>=0.8.6",
    "decorator>=4.4.2",
    "mini-racer>=0.12.4; platform_system != 'Linux'",
    "py-mini-racer>=0.6.0; platform_system == 'Linux'",
    "akracer>=0.0.13; platform_system == 'Linux'",
]

[project.optional-dependencies]
full = ["akqmt"]
qmt = ["akqmt"]
dev = [
    "akqmt>=0.1.0",
    "commitizen>=4.12.1",
    "pre-commit>=3.6.2",
    "sphinx>=7.4.3",
    "recommonmark>=0.7.1",
    "sphinx_markdown_tables>=0.0.17",
    "sphinx_rtd_theme>=1.0.0",
    "mplfinance>=0.12.10b0",
    "ruff>=0.14.14",
    "ruff-lsp>=0.0.53",
]

[project.urls]
Homepage = "https://github.com/akfamily/akshare"

[tool.setuptools.dynamic]
version = {attr = "akshare._version.__version__"}

[tool.setuptools.packages.find]
include = ["akshare*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.pk", "*.js", "*.zip"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "akshare/__init__.py",  # 初始化导入库文件，必须包含本文件
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
